lintian (2.5.37) UNRELEASED; urgency=medium

   "XXX: generate tag summary"

  * checks/fields.desc:
    + [JW] Use "an" (instead of "a") before "HTTP".

  * lib/Lintian/{Tags.pm,Tag/Override.pm}:
    + [BR] Support tag renaming. Warn about renamed
      tags.

 -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Sat, 15 Aug 2015 23:49:50 +0200

lintian (2.5.36.1) unstable; urgency=medium

  * checks/application-not-library.pm:
    + [NT] Fix invalid import.

 -- Niels Thykier <niels@thykier.net>  Sat, 15 Aug 2015 10:47:33 +0200

lintian (2.5.36) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - application-in-library-section
      - dep5-file-paragraph-references-header-paragraph
      - libapp-perl-package-name
      - libmodule-build-perl-needs-to-be-in-build-depends
      - libmodule-build-tiny-perl-needs-to-be-in-build-depends
      - library-package-name-for-application
      - maintainer-script-may-use-dir_to_symlink_helper
      - mentions-deprecated-usr-lib-perl5-directory
      - package-installs-apt-preferences
      - package-installs-apt-sources
      - package-installs-ieee-data
      - package-installs-into-obsolete-dir
      - package-relation-with-perl-modules
      - perl-module-name-not-mentioned-in-description
      - privacy-breach-uses-embedded-file
    + Removed:
      - dep5-file-paragraph-reference-header-paragraph
      - package-install-apt-preferences
      - package-install-apt-sources
      - package-install-ieee-data
      - package-install-into-obsolete-dir
      - privacy-breach-may-use-debian-package

  * checks/application-not-library.{desc,pm}:
    + [AB] New experimental checks imported from pkg-perl-tools.
  * checks/changelog-file.pm:
    + [JW] Fix invalid comparison leading to false positive
      non-consecutive-debian-revision tags.  (Closes: #794995)
  * checks/cruft.{desc,pm}:
    + [BR] Avoid a false positive for gfdl detection in krusader.