@@ -546,6 +546,11 @@ sub run {
                 if ($flags) {
                     foreach my $t (@{$info->hardening_info->{$fname}}) {
                         my $tag = "hardening-$t";
+                        # Binaries built by the Go compiler do not support all
+                        # hardening measures.
+                        next if ($t eq 'no-relro' ||
+                                 $t eq 'no-fortify-functions') &&
+                                 $built_with_golang;
                         tag $tag, $file if $flags->{$tag};
                     }
                 }
